deploy: 275cd502094310c87bbe82b934db3eb26fddb175

--- a/python/namespace.html
+++ b/python/namespace.html
@@ -367,9 +367,11 @@ b -&gt; bn;
 </div>
 </div>
 </div>
-<p><strong>1.</strong> Fix <code class="docutils literal notranslate"><span class="pre">add_squared_constant()</span></code> so it works to return <code class="docutils literal notranslate"><span class="pre">[8,</span> <span class="pre">16,</span> <span class="pre">46]</span></code> given <code class="docutils literal notranslate"><span class="pre">data</span></code>.</p>
-<p><strong>2.</strong> Fix, without using the <code class="docutils literal notranslate"><span class="pre">global</span></code> keyword, so it works to return <code class="docutils literal notranslate"><span class="pre">[8,</span> <span class="pre">16,</span> <span class="pre">46]</span></code> given <code class="docutils literal notranslate"><span class="pre">data</span></code>.</p>
-<p><strong>3.</strong> Fix, using the <code class="docutils literal notranslate"><span class="pre">global</span></code> keyword, so it works to return <code class="docutils literal notranslate"><span class="pre">[8,</span> <span class="pre">16,</span> <span class="pre">46]</span></code> given <code class="docutils literal notranslate"><span class="pre">data</span></code>. What happens to the global variable <code class="docutils literal notranslate"><span class="pre">CONSTANT</span></code> <a class="footnote-reference brackets" href="#id6" id="id5">2</a>?</p>
+<ol class="arabic simple">
+<li><p>Fix <code class="docutils literal notranslate"><span class="pre">add_squared_constant()</span></code> so it works to return <code class="docutils literal notranslate"><span class="pre">[8,</span> <span class="pre">16,</span> <span class="pre">46]</span></code> given <code class="docutils literal notranslate"><span class="pre">data</span></code>.</p></li>
+<li><p>Fix, without using the <code class="docutils literal notranslate"><span class="pre">global</span></code> keyword, so it works to return <code class="docutils literal notranslate"><span class="pre">[8,</span> <span class="pre">16,</span> <span class="pre">46]</span></code> given <code class="docutils literal notranslate"><span class="pre">data</span></code>.</p></li>
+<li><p>Fix, using the <code class="docutils literal notranslate"><span class="pre">global</span></code> keyword, so it works to return <code class="docutils literal notranslate"><span class="pre">[8,</span> <span class="pre">16,</span> <span class="pre">46]</span></code> given <code class="docutils literal notranslate"><span class="pre">data</span></code>. What happens to the global variable <code class="docutils literal notranslate"><span class="pre">CONSTANT</span></code> <a class="footnote-reference brackets" href="#id6" id="id5">2</a>?</p></li>
+</ol>
 <dl class="footnote brackets">
 <dt class="label" id="id6"><span class="brackets"><a class="fn-backref" href="#id5">2</a></span></dt>
 <dd><p>A part of the coding style guidelines I use is to use ALL CAPS for variables that are meant to be treated as constants.</p>
