--- a/genindex.html
+++ b/genindex.html
@@ -14,8 +14,9 @@
   <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
   <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
   <link rel="stylesheet" href="_static/graphviz.css" type="text/css" />
-  <link rel="stylesheet" href="_static/css/custom.css" type="text/css" />
   <link rel="stylesheet" href="_static/jupyter-sphinx.css" type="text/css" />
+  <link rel="stylesheet" href="_static/thebelab.css" type="text/css" />
+  <link rel="stylesheet" href="_static/css/custom.css" type="text/css" />
   <link rel="stylesheet" href="_static/sphinx-dropdown.css" type="text/css" />
   <link rel="stylesheet" href="_static/panels-bootstrap.min.css" type="text/css" />
 
@@ -35,6 +36,7 @@
         <script src="_static/underscore.js"></script>
         <script src="_static/doctools.js"></script>
         <script src="_static/language_data.js"></script>
+        <script src="_static/thebelab-helper.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
         <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.18.0/dist/embed-amd.js"></script>
         <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
@@ -570,6 +572,8 @@
       </ul></li>
       <li><a href="python/writing_functions.html#index-4">docstring</a>
 </li>
+      <li><a href="seqcomp/pairwise_alignment.html#index-1">dynamic programming</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -800,6 +804,13 @@
 </li>
       <li><a href="python/import.html#index-0">import</a>
 </li>
+      <li>
+    indel
+
+      <ul>
+        <li><a href="seqcomp/pairwise_alignment.html#index-0">insertion deletion</a>
+</li>
+      </ul></li>
       <li><a href="python/logic.html#index-1">indentation</a>
 </li>
       <li><a href="python/indexing.html#index-0">index</a>
@@ -811,10 +822,17 @@
         <li><a href="python/numpy.html#index-3">numpy</a>
 </li>
       </ul></li>
-      <li><a href="python/functions.html#index-2">instance</a>
+      <li>
+    insertion deletion
+
+      <ul>
+        <li><a href="seqcomp/pairwise_alignment.html#index-0">indel</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python/functions.html#index-2">instance</a>
+</li>
       <li>
     int
 
