--- a/genindex.html
+++ b/genindex.html
@@ -202,6 +202,13 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
+    !=
+
+      <ul>
+        <li><a href="python/operators.html#index-0">operators</a>
+</li>
+      </ul></li>
+      <li>
     &#34; &#34;
 
       <ul>
@@ -238,8 +245,6 @@
       </ul></li>
       <li><a href="python/more_looping.html#index-2">&#34;array coordinates&#34;</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/more_looping.html#index-1">&#34;cartesian coordinates&#34;</a>
 </li>
       <li>
@@ -249,22 +254,75 @@
         <li><a href="python/logic.html#index-8">comment</a>
 </li>
       </ul></li>
+      <li>
+    %
+
+      <ul>
+        <li><a href="python/start.html#index-6">maths</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    &amp;
+
+      <ul>
+        <li><a href="python/operators.html#index-1">bitwise operators</a>
+</li>
+      </ul></li>
       <li><a href="python/import.html#index-3">3rd party libraries</a>
 </li>
       <li><a href="seqcomp/statistics.html#index-2">:math:`H_o`</a>
 </li>
-      <li><a href="python/operators.html#index-0">&lt;</a>
+      <li>
+    &lt;
+
+      <ul>
+        <li><a href="python/operators.html#index-0">operators</a>
 </li>
-      <li><a href="python/operators.html#index-0">&lt;=</a>
+      </ul></li>
+      <li>
+    &lt;=
+
+      <ul>
+        <li><a href="python/operators.html#index-0">operators</a>
 </li>
-      <li><a href="python/operators.html#index-0"><strong>=</strong></a>
+      </ul></li>
+      <li>
+    ==
+
+      <ul>
+        <li><a href="python/operators.html#index-0">operators</a>
 </li>
-      <li><a href="python/operators.html#index-0">==</a>
+      </ul></li>
+      <li>
+    &gt;
+
+      <ul>
+        <li><a href="python/operators.html#index-0">operators</a>
 </li>
-      <li><a href="python/operators.html#index-0">&gt;</a>
+      </ul></li>
+      <li>
+    &gt;=
+
+      <ul>
+        <li><a href="python/operators.html#index-0">operators</a>
 </li>
-      <li><a href="python/operators.html#index-0">&gt;=</a>
+      </ul></li>
+      <li>
+    ^
+
+      <ul>
+        <li><a href="python/operators.html#index-1">bitwise operators</a>
 </li>
+      </ul></li>
+      <li>
+    |
+
+      <ul>
+        <li><a href="python/operators.html#index-1">bitwise operators</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -354,6 +412,17 @@
 </li>
       </ul></li>
       <li>
+    bitwise operators
+
+      <ul>
+        <li><a href="python/operators.html#index-1">&amp;</a>
+</li>
+        <li><a href="python/operators.html#index-1">^</a>
+</li>
+        <li><a href="python/operators.html#index-1">|</a>
+</li>
+      </ul></li>
+      <li>
     bool
 
       <ul>
@@ -367,6 +436,8 @@
         <li><a href="python/numpy.html#index-7">numpy</a>, <a href="python/numpy.html#index-8">[1]</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     bool indexing
 
@@ -374,8 +445,6 @@
         <li><a href="python/numpy.html#index-4">numpy</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     boolean indexing
 
@@ -570,6 +639,20 @@
         <li><a href="python/start.html#index-5">maths</a>
 </li>
       </ul></li>
+      <li>
+    division remainder
+
+      <ul>
+        <li><a href="python/start.html#index-6">maths</a>
+</li>
+      </ul></li>
+      <li>
+    divmod()
+
+      <ul>
+        <li><a href="python/start.html#index-6">maths</a>
+</li>
+      </ul></li>
       <li><a href="python/writing_functions.html#index-4">docstring</a>
 </li>
       <li><a href="seqcomp/pairwise_alignment.html#index-1">dynamic programming</a>
@@ -665,7 +748,7 @@
     exponents
 
       <ul>
-        <li><a href="python/start.html#index-6">maths</a>
+        <li><a href="python/start.html#index-7">maths</a>
 </li>
       </ul></li>
   </ul></td>
@@ -712,8 +795,6 @@
         <li><a href="python/types.html#index-2">types</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     for
 
@@ -721,11 +802,20 @@
         <li><a href="python/logic.html#index-5">loops</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     format
 
       <ul>
         <li><a href="python/types.html#index-11">str</a>
+</li>
+      </ul></li>
+      <li>
+    frozenset
+
+      <ul>
+        <li><a href="python/sets.html#index-0">type</a>
 </li>
       </ul></li>
       <li>
@@ -854,8 +944,13 @@
         <li><a href="python/numpy.html#index-8">numpy</a>
 </li>
       </ul></li>
-      <li><a href="python/operators.html#index-0">is</a>
+      <li>
+    is
+
+      <ul>
+        <li><a href="python/operators.html#index-0">operators</a>
 </li>
+      </ul></li>
       <li>
     iterate contents
 
@@ -970,23 +1065,31 @@
       <li><a href="python/numpy.html#index-0">maths</a>
 
       <ul>
+        <li><a href="python/start.html#index-6">%</a>
+</li>
         <li><a href="python/start.html#index-2">add</a>
 </li>
         <li><a href="python/start.html#index-5">divide</a>
 </li>
-        <li><a href="python/start.html#index-6">exponents</a>
+        <li><a href="python/start.html#index-6">division remainder</a>
+</li>
+        <li><a href="python/start.html#index-6">divmod()</a>
+</li>
+        <li><a href="python/start.html#index-7">exponents</a>
 </li>
         <li><a href="python/start.html#index-5">integer divide</a>
 </li>
         <li><a href="python/start.html#index-3">minus</a>
 </li>
+        <li><a href="python/start.html#index-6">modulo operator</a>
+</li>
         <li><a href="python/start.html#index-4">multiply</a>
 </li>
         <li><a href="python/start.html#index-2">plus</a>
 </li>
-        <li><a href="python/start.html#index-6">powers</a>
+        <li><a href="python/start.html#index-7">powers</a>
 </li>
-        <li><a href="python/start.html#index-7">roots</a>
+        <li><a href="python/start.html#index-8">roots</a>
 </li>
         <li><a href="python/start.html#index-3">subtract</a>
 </li>
@@ -998,6 +1101,8 @@
         <li><a href="python/numpy.html#index-1">numpy</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     matrix multiplication
 
@@ -1005,8 +1110,6 @@
         <li><a href="python/numpy.html#index-12">numpy</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     matrix multiply
 
@@ -1041,6 +1144,13 @@
       </ul></li>
       <li><a href="python/import.html#index-0">modules</a>
 </li>
+      <li>
+    modulo operator
+
+      <ul>
+        <li><a href="python/start.html#index-6">maths</a>
+</li>
+      </ul></li>
       <li><a href="seqcomp/motifs.html#index-1">motif</a>
 </li>
       <li>
@@ -1163,10 +1273,27 @@
         <li><a href="python/files.html#index-2">files</a>
 </li>
       </ul></li>
+      <li>
+    operators
+
+      <ul>
+        <li><a href="python/operators.html#index-0">!=</a>
+</li>
+        <li><a href="python/operators.html#index-0">&lt;</a>
+</li>
+        <li><a href="python/operators.html#index-0">&lt;=</a>
+</li>
+        <li><a href="python/operators.html#index-0">==</a>
+</li>
+        <li><a href="python/operators.html#index-0">&gt;</a>
+</li>
+        <li><a href="python/operators.html#index-0">&gt;=</a>
+</li>
+        <li><a href="python/operators.html#index-0">is</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python/operators.html#index-0">operators</a>
-</li>
       <li>
     optional arguments
 
@@ -1246,7 +1373,7 @@
     powers
 
       <ul>
-        <li><a href="python/start.html#index-6">maths</a>
+        <li><a href="python/start.html#index-7">maths</a>
 </li>
       </ul></li>
       <li><a href="seqcomp/pssm.html#index-2">profiles</a>
@@ -1331,7 +1458,7 @@
     roots
 
       <ul>
-        <li><a href="python/start.html#index-7">maths</a>
+        <li><a href="python/start.html#index-8">maths</a>
 </li>
       </ul></li>
   </ul></td>
@@ -1374,6 +1501,13 @@
       </ul></li>
       <li><a href="seqcomp/related_by_function.html#index-0">SELEX</a>
 </li>
+      <li>
+    set
+
+      <ul>
+        <li><a href="python/sets.html#index-0">type</a>
+</li>
+      </ul></li>
       <li><a href="python/indexing.html#index-1">slice</a>
 
       <ul>
@@ -1429,6 +1563,8 @@
         <li><a href="seqcomp/statistics.html#index-1">uniform</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     stop
 
@@ -1436,8 +1572,6 @@
         <li><a href="python/indexing.html#index-2">slice</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     str
 
@@ -1598,13 +1732,22 @@
         <li><a href="seqcomp/gene_expression.html#index-0">transcription start site</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     tuple
 
       <ul>
         <li><a href="python/types.html#index-6">types collection objects</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    type
+
+      <ul>
+        <li><a href="python/sets.html#index-0">frozenset</a>
+</li>
+        <li><a href="python/sets.html#index-0">set</a>
 </li>
       </ul></li>
       <li><a href="python/how_to_write_a_program.html#index-0">type casting</a>
