deploy: e302d17697c9771251ee2017613eaa7c5ac9a1c5

--- a/genindex.html
+++ b/genindex.html
@@ -272,6 +272,8 @@
         <li><a href="python/operators.html#index-1">bitwise operators</a>
 </li>
       </ul></li>
+      <li><a href="seqcomp/dotplot.html#index-0">**kwargs</a>
+</li>
       <li><a href="python/import.html#index-3">3rd party libraries</a>
 </li>
       <li>
