deploy: 91af0d9df15a8a550ac6069b7fa71c15c963337f

--- a/genindex.html
+++ b/genindex.html
@@ -469,6 +469,8 @@
     builtin
 
       <ul>
+        <li><a href="cogent3/tables.html#index-1">function, zip</a>
+</li>
         <li><a href="python/functions.html#index-1">functions</a>
 </li>
       </ul></li>
@@ -518,7 +520,15 @@
 </li>
         <li><a href="cogent3/sequences.html#index-1">alignment, pretty print</a>
 </li>
+        <li><a href="cogent3/tables.html#index-4">filter table</a>
+</li>
+        <li><a href="cogent3/tables.html#index-5">index column table</a>
+</li>
         <li><a href="cogent3/explore_variation.html#index-0">k-mer motif_len</a>
+</li>
+        <li><a href="cogent3/tables.html#index-3">load from file table</a>
+</li>
+        <li><a href="cogent3/tables.html#index-0">make table</a>
 </li>
         <li><a href="cogent3/moltype.html#index-0">moltype</a>
 </li>
@@ -540,6 +550,8 @@
         <li><a href="python/types.html#index-6">tuple types</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     comment
 
@@ -549,8 +561,6 @@
         <li><a href="python/logic.html#index-8">comment lines</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     comment lines
 
@@ -843,6 +853,13 @@
 </li>
       </ul></li>
       <li>
+    filter
+
+      <ul>
+        <li><a href="cogent3/tables.html#index-4">table cogent3</a>
+</li>
+      </ul></li>
+      <li>
     float
 
       <ul>
@@ -887,6 +904,8 @@
         <li><a href="python/writing_functions.html#index-0">return</a>
 </li>
         <li><a href="python/writing_functions.html#index-0">syntax</a>
+</li>
+        <li><a href="cogent3/tables.html#index-1">zip builtin</a>
 </li>
       </ul></li>
       <li><a href="python/functions.html#index-0">functions</a>
@@ -961,6 +980,13 @@
 </li>
       <li><a href="python/indexing.html#index-0">index</a>
 </li>
+      <li>
+    index column
+
+      <ul>
+        <li><a href="cogent3/tables.html#index-5">table cogent3</a>
+</li>
+      </ul></li>
       <li>
     indexing
 
@@ -1093,6 +1119,13 @@
         <li><a href="python/strings.html#index-1">string</a>
 </li>
       </ul></li>
+      <li>
+    load from file
+
+      <ul>
+        <li><a href="cogent3/tables.html#index-3">table cogent3</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="seqcomp/pssm.html#index-1">log-odds ratios</a>
@@ -1125,6 +1158,13 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    make table
+
+      <ul>
+        <li><a href="cogent3/tables.html#index-0">cogent3</a>
+</li>
+      </ul></li>
       <li>
     marker
 
@@ -1185,6 +1225,8 @@
         <li><a href="python/numpy.html#index-11">numpy</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     mean
 
@@ -1192,8 +1234,6 @@
         <li><a href="python/numpy.html#index-10">numpy</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/dictionaries.html#index-3">method chaining</a>, <a href="python/misc.html#index-6">[1]</a>, <a href="python/numpy.html#index-14">[2]</a>
 </li>
       <li><a href="python/functions.html#index-3">methods</a>
@@ -1795,6 +1835,17 @@
         <li><a href="python/strings.html#index-2">string</a>
 </li>
       </ul></li>
+      <li>
+    table
+
+      <ul>
+        <li><a href="cogent3/tables.html#index-4">cogent3, filter</a>
+</li>
+        <li><a href="cogent3/tables.html#index-5">cogent3, index column</a>
+</li>
+        <li><a href="cogent3/tables.html#index-3">cogent3, load from file</a>
+</li>
+      </ul></li>
       <li><a href="python/misc.html#index-3">testing</a>
 </li>
       <li>
@@ -1862,6 +1913,8 @@
         <li><a href="python/types.html#index-3">types</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     TSS
 
@@ -1869,8 +1922,6 @@
         <li><a href="seqcomp/gene_expression.html#index-0">transcription start site</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     tuple
 
@@ -1948,7 +1999,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/variables.html#index-1">unpacking</a>
 </li>
-      <li><a href="python/misc.html#index-5">unzip</a>
+      <li><a href="cogent3/tables.html#index-2">unzip</a>, <a href="python/misc.html#index-5">[1]</a>
 </li>
   </ul></td>
 </tr></table>
@@ -2040,7 +2091,11 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/misc.html#index-5">zip</a>
+
+      <ul>
+        <li><a href="cogent3/tables.html#index-1">builtin function</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
