--- a/seqcomp/pssm.html
+++ b/seqcomp/pssm.html
@@ -270,7 +270,7 @@
 </tr>
 </tbody>
 </table>
-<p>
+<p>Top 4 rows from
 4 rows x 4 columns</p>
 </div></div></div>
 </div>
@@ -383,7 +383,7 @@ for seq_index in sequence
 </tr>
 </tbody>
 </table>
-<p>
+<p>Top 4 rows from
 4 rows x 5 columns</p>
 </div></div></div>
 </div>
@@ -461,7 +461,7 @@ for seq_index in sequence
 </tr>
 </tbody>
 </table>
-<p>
+<p>Top 4 rows from
 4 rows x 5 columns</p>
 </div></div></div>
 </div>
