--- a/seqcomp/related_by_function.html
+++ b/seqcomp/related_by_function.html
@@ -391,7 +391,7 @@ TYHBM &lt;-- the IUPAC consensus
 </tr>
 </tbody>
 </table>
-<p>
+<p>Top 4 rows from
 4 rows x 8 columns</p>
 </div></div></div>
 </div>
