deploy: 3154b1aa3e84410b9ca1b304b8d51055818a90c3

--- a/genindex.html
+++ b/genindex.html
@@ -526,11 +526,25 @@
 </li>
         <li><a href="cogent3/explore_variation.html#index-0">k-mer motif_len</a>
 </li>
+        <li><a href="cogent3/statistical_tests.html#index-1">Kolmogorov-Smirnov statistical test</a>
+</li>
+        <li><a href="cogent3/statistical_tests.html#index-1">KS bootstrap statistical test</a>
+</li>
+        <li><a href="cogent3/statistical_tests.html#index-1">KS statistical test</a>
+</li>
         <li><a href="cogent3/tables.html#index-3">load from file table</a>
 </li>
         <li><a href="cogent3/tables.html#index-0">make table</a>
 </li>
+        <li><a href="cogent3/statistical_tests.html#index-0">Mann-Whitney statistical test</a>
+</li>
         <li><a href="cogent3/moltype.html#index-0">moltype</a>
+</li>
+        <li><a href="cogent3/statistical_tests.html#index-0">MW bootstrap statistical test</a>
+</li>
+        <li><a href="cogent3/statistical_tests.html#index-0">MW statistical test</a>
+</li>
+        <li><a href="cogent3/statistical_tests.html#index-2">quantiles statistical test</a>
 </li>
       </ul></li>
       <li>
@@ -1071,8 +1085,6 @@
         <li><a href="python/dictionaries.html#index-1">Exceptions</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     keyword
 
@@ -1082,11 +1094,34 @@
         <li><a href="python/iterators.html#index-2">yield</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     keyword arguments
 
       <ul>
         <li><a href="python/writing_functions.html#index-3">function</a>
+</li>
+      </ul></li>
+      <li>
+    Kolmogorov-Smirnov
+
+      <ul>
+        <li><a href="cogent3/statistical_tests.html#index-1">statistical test cogent3</a>
+</li>
+      </ul></li>
+      <li>
+    KS
+
+      <ul>
+        <li><a href="cogent3/statistical_tests.html#index-1">statistical test cogent3</a>
+</li>
+      </ul></li>
+      <li>
+    KS bootstrap
+
+      <ul>
+        <li><a href="cogent3/statistical_tests.html#index-1">statistical test cogent3</a>
 </li>
       </ul></li>
   </ul></td>
@@ -1166,6 +1201,13 @@
 </li>
       </ul></li>
       <li>
+    Mann-Whitney
+
+      <ul>
+        <li><a href="cogent3/statistical_tests.html#index-0">statistical test cogent3</a>
+</li>
+      </ul></li>
+      <li>
     marker
 
       <ul>
@@ -1225,8 +1267,6 @@
         <li><a href="python/numpy.html#index-11">numpy</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     mean
 
@@ -1234,6 +1274,8 @@
         <li><a href="python/numpy.html#index-10">numpy</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/dictionaries.html#index-3">method chaining</a>, <a href="python/misc.html#index-6">[1]</a>, <a href="python/numpy.html#index-14">[2]</a>
 </li>
       <li><a href="python/functions.html#index-3">methods</a>
@@ -1304,6 +1346,20 @@
         <li><a href="molevol/mutation.html#index-0">insertion</a>
 </li>
         <li><a href="molevol/mutation.html#index-0">point mutation</a>
+</li>
+      </ul></li>
+      <li>
+    MW
+
+      <ul>
+        <li><a href="cogent3/statistical_tests.html#index-0">statistical test cogent3</a>
+</li>
+      </ul></li>
+      <li>
+    MW bootstrap
+
+      <ul>
+        <li><a href="cogent3/statistical_tests.html#index-0">statistical test cogent3</a>
 </li>
       </ul></li>
   </ul></td>
@@ -1567,6 +1623,15 @@
 </li>
       </ul></li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    quantiles
+
+      <ul>
+        <li><a href="cogent3/statistical_tests.html#index-2">statistical test cogent3</a>
+</li>
+      </ul></li>
+  </ul></td>
 </tr></table>
 
 <h2 id="R">R</h2>
@@ -1724,6 +1789,25 @@
 
       <ul>
         <li><a href="seqcomp/statistics.html#index-1">uniform</a>
+</li>
+      </ul></li>
+      <li>
+    statistical test
+
+      <ul>
+        <li><a href="cogent3/statistical_tests.html#index-1">cogent3, Kolmogorov-Smirnov</a>
+</li>
+        <li><a href="cogent3/statistical_tests.html#index-1">cogent3, KS</a>
+</li>
+        <li><a href="cogent3/statistical_tests.html#index-1">cogent3, KS bootstrap</a>
+</li>
+        <li><a href="cogent3/statistical_tests.html#index-0">cogent3, Mann-Whitney</a>
+</li>
+        <li><a href="cogent3/statistical_tests.html#index-0">cogent3, MW</a>
+</li>
+        <li><a href="cogent3/statistical_tests.html#index-0">cogent3, MW bootstrap</a>
+</li>
+        <li><a href="cogent3/statistical_tests.html#index-2">cogent3, quantiles</a>
 </li>
       </ul></li>
   </ul></td>
