--- a/contribute.html
+++ b/contribute.html
@@ -17,8 +17,9 @@
   <link rel="stylesheet" href="_static/jupyter-sphinx.css" type="text/css" />
   <link rel="stylesheet" href="_static/thebelab.css" type="text/css" />
   <link rel="stylesheet" href="_static/css/custom.css" type="text/css" />
-  <link rel="stylesheet" href="_static/sphinx-dropdown.css" type="text/css" />
-  <link rel="stylesheet" href="_static/panels-bootstrap.min.css" type="text/css" />
+  <link rel="stylesheet" href="_static/spanels-index--0afa1ebdab0bb23b98b56d34c23d9f57.css" type="text/css" />
+  <link rel="stylesheet" href="_static/spanels-bootstrap-index--5fd3999ee7762ccc51105388f4a9d115.css" type="text/css" />
+  <link rel="stylesheet" href="_static/spanels-variables--ffc7f74dcb1b9eecba2dbcbc22818714.css" type="text/css" />
 
   
   
