deploy: 303d9c20dee76d9de8f3ddcce442108bdef41e53

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
   <script type="text/javascript">
       jQuery(function () {
-          SphinxRtdTheme.Navigation.enable(false);
+          SphinxRtdTheme.Navigation.enable(true);
       });
   </script>
 
