--- a/molevol/mutation.html
+++ b/molevol/mutation.html
@@ -383,7 +383,7 @@ G -&gt; T [dir=both];
 
   <script type="text/javascript">
       jQuery(function () {
-          SphinxRtdTheme.Navigation.enable(false);
+          SphinxRtdTheme.Navigation.enable(true);
       });
   </script>
 
