--- a/molevol/neutral_theory.html
+++ b/molevol/neutral_theory.html
@@ -363,7 +363,7 @@ For neutral variation, the evolutionary dynamics (changes in frequency) are dict
 
   <script type="text/javascript">
       jQuery(function () {
-          SphinxRtdTheme.Navigation.enable(false);
+          SphinxRtdTheme.Navigation.enable(true);
       });
   </script>
 
