--- a/seqcomp/pssm.html
+++ b/seqcomp/pssm.html
@@ -533,7 +533,7 @@ for seq_index in sequence
 
   <script type="text/javascript">
       jQuery(function () {
-          SphinxRtdTheme.Navigation.enable(false);
+          SphinxRtdTheme.Navigation.enable(true);
       });
   </script>
 
