--- a/seqcomp/related_by_function.html
+++ b/seqcomp/related_by_function.html
@@ -454,7 +454,7 @@ TYHBM &lt;-- the IUPAC consensus
 
   <script type="text/javascript">
       jQuery(function () {
-          SphinxRtdTheme.Navigation.enable(false);
+          SphinxRtdTheme.Navigation.enable(true);
       });
   </script>
 
