--- a/cogent3/data_formats.html
+++ b/cogent3/data_formats.html
@@ -347,7 +347,7 @@ ORIGIN
 
   <script type="text/javascript">
       jQuery(function () {
-          SphinxRtdTheme.Navigation.enable(false);
+          SphinxRtdTheme.Navigation.enable(true);
       });
   </script>
 
