--- a/cogent3/tables.html
+++ b/cogent3/tables.html
@@ -1503,7 +1503,7 @@
 
   <script type="text/javascript">
       jQuery(function () {
-          SphinxRtdTheme.Navigation.enable(false);
+          SphinxRtdTheme.Navigation.enable(true);
       });
   </script>
 
