--- a/molevol/glossary.html
+++ b/molevol/glossary.html
@@ -282,7 +282,7 @@
 
   <script type="text/javascript">
       jQuery(function () {
-          SphinxRtdTheme.Navigation.enable(false);
+          SphinxRtdTheme.Navigation.enable(true);
       });
   </script>
 
