--- a/python/dictionaries.html
+++ b/python/dictionaries.html
@@ -700,7 +700,7 @@ key=G and value=3
 
   <script type="text/javascript">
       jQuery(function () {
-          SphinxRtdTheme.Navigation.enable(false);
+          SphinxRtdTheme.Navigation.enable(true);
       });
   </script>
 
