--- a/python/dir_help.html
+++ b/python/dir_help.html
@@ -399,7 +399,7 @@ append(object, /) method of builtins.list instance
 
   <script type="text/javascript">
       jQuery(function () {
-          SphinxRtdTheme.Navigation.enable(false);
+          SphinxRtdTheme.Navigation.enable(true);
       });
   </script>
 
