--- a/python/interpreting_errors.html
+++ b/python/interpreting_errors.html
@@ -445,7 +445,7 @@
 
   <script type="text/javascript">
       jQuery(function () {
-          SphinxRtdTheme.Navigation.enable(false);
+          SphinxRtdTheme.Navigation.enable(true);
       });
   </script>
 
