--- a/python/intro.html
+++ b/python/intro.html
@@ -358,7 +358,7 @@ a -&gt; b -&gt; c;
 
   <script type="text/javascript">
       jQuery(function () {
-          SphinxRtdTheme.Navigation.enable(false);
+          SphinxRtdTheme.Navigation.enable(true);
       });
   </script>
 
