--- a/python/logic.html
+++ b/python/logic.html
@@ -577,7 +577,7 @@ e
 
   <script type="text/javascript">
       jQuery(function () {
-          SphinxRtdTheme.Navigation.enable(false);
+          SphinxRtdTheme.Navigation.enable(true);
       });
   </script>
 
