--- a/python/misc.html
+++ b/python/misc.html
@@ -603,7 +603,7 @@ NO Empty string
 
   <script type="text/javascript">
       jQuery(function () {
-          SphinxRtdTheme.Navigation.enable(false);
+          SphinxRtdTheme.Navigation.enable(true);
       });
   </script>
 
