--- a/python/more_looping.html
+++ b/python/more_looping.html
@@ -433,7 +433,7 @@ row=0 col=1 val=4
 
   <script type="text/javascript">
       jQuery(function () {
-          SphinxRtdTheme.Navigation.enable(false);
+          SphinxRtdTheme.Navigation.enable(true);
       });
   </script>
 
