--- a/python/namespace.html
+++ b/python/namespace.html
@@ -432,7 +432,7 @@ b -&gt; bn;
 
   <script type="text/javascript">
       jQuery(function () {
-          SphinxRtdTheme.Navigation.enable(false);
+          SphinxRtdTheme.Navigation.enable(true);
       });
   </script>
 
