--- a/python/strings.html
+++ b/python/strings.html
@@ -947,7 +947,7 @@ himalayan palm civet
 
   <script type="text/javascript">
       jQuery(function () {
-          SphinxRtdTheme.Navigation.enable(false);
+          SphinxRtdTheme.Navigation.enable(true);
       });
   </script>
 
