--- a/python/writing_functions.html
+++ b/python/writing_functions.html
@@ -648,7 +648,7 @@ myfunc()
 
   <script type="text/javascript">
       jQuery(function () {
-          SphinxRtdTheme.Navigation.enable(false);
+          SphinxRtdTheme.Navigation.enable(true);
       });
   </script>
 
